--- a/planets.html
+++ b/planets.html
@@ -60,17 +60,21 @@
       #tundraSurvey { top:80px; left:1000px; height:300px; }
       #continentalSurvey { top:80px; left:1000px; height:300px; }
       #oceanSurvey { top:80px; left:1000px; height:300px; }
+      .surveyIcon { display:none; }
+      #surveyIcon { width:20px; height:20px; }
     </style>
   </head>
   <body>
     
-    <img class="planet" id="desert-planet" src="desertplanet1.png" onclick="surveyDesert(this)" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Desert Planet Img---->
+    <img class="planet" id="desert-planet" src="desertplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Desert Planet Img, onclick="surveyDesert(this)"---->
     <img class="planet" id="savanna-planet" src="savannaplanet1.png" onclick="surveySavanna(this)" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Savanna Planet Img---->
     <img class="planet" id="arctic-planet" src="arcticplanet1.png" onclick="surveyArctic(this)" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Arctic Planet Img---->
     <img class="planet" id="tundra-planet" src="tundraplanet1.png" onclick="surveyTundra(this)" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Tundra Planet Img---->
     <img class="planet" id="continental-planet" src="continentalplanet1.png" onclick="surveyContinental(this)" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Continental Planet Img---->
     <img class="planet" id="ocean-planet" src="oceanplanet1.png" onclick="surveyOcean(this)" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Ocean Planet Img---->
     
+    <img class="surveyIcon" id="surveyIcon" src="surveyicon.png" onclick="surveyDesert(this)"></img>
+
     <div class="info-box" id="desertSurvey" onclick="unSurvey(this)"> <!--Desert Planet--->
       <div class="cell top"></div>
       <div class="cell name"><p> [variable] </p></div>
@@ -141,33 +145,39 @@
       function select(el) {
         el.style.backgroundColor = "lime";
         el.style.padding = "1.5px";
+        var surveyIcon = document.getElementById("surveyIcon");
+        var newTop = el.style.top + "75";
+        var newLeft = el.style.left;
+        surveyIcon.style.top = newTop + "px";
+        surveyIcon.style.left = newLeft + "px";
+        surveyIcon.style.display = "block";
       }
       function deselect(el) {
         el.style.backgroundColor = "gray";
         el.style.padding = "0px";
       }
       function surveyDesert() {
-        var survey = document.getElementById("desertSurvey")
+        var survey = document.getElementById("desertSurvey");
         survey.style.display = "inline-grid";
       }
       function surveySavanna() {
-        var survey = document.getElementById("savannaSurvey")
+        var survey = document.getElementById("savannaSurvey");
         survey.style.display = "inline-grid";
       }
       function surveyArctic() {
-        var survey = document.getElementById("arcticSurvey")
+        var survey = document.getElementById("arcticSurvey");
         survey.style.display = "inline-grid";
       }
       function surveyTundra() {
-        var survey = document.getElementById("tundraSurvey")
+        var survey = document.getElementById("tundraSurvey");
         survey.style.display = "inline-grid";
       }
       function surveyContinental() {
-        var survey = document.getElementById("continentalSurvey")
+        var survey = document.getElementById("continentalSurvey");
         survey.style.display = "inline-grid";
       }
       function surveyOcean() {
-        var survey = document.getElementById("oceanSurvey")
+        var survey = document.getElementById("oceanSurvey");
         survey.style.display = "inline-grid";
       }
       function unSurvey(el) {
@@ -176,4 +186,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.65--->
+<!--Version 0.66--->
