--- a/planets.html
+++ b/planets.html
@@ -155,6 +155,8 @@
       function deselect(el) {
         el.style.backgroundColor = "gray";
         el.style.padding = "0px";
+        var surveyIcon = document.getElementById("surveyIcon");
+        surveyIcon.style.display = "none";
       }
       function surveyDesert() {
         var survey = document.getElementById("desertSurvey");
@@ -186,4 +188,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.70--->
+<!--Version 0.71--->
