--- a/planets.html
+++ b/planets.html
@@ -154,6 +154,7 @@
         var newWidth = 20;
         surveyIcon.style.height = newHeight + "px";
         surveyIcon.style.width = newWidth + "px";
+        surveyIcon.style.display = "block";
       }
       function deselect(el) {
         el.style.backgroundColor = "gray";
@@ -193,4 +194,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.72--->
+<!--Version 0.73--->
