--- a/planets.html
+++ b/planets.html
@@ -159,7 +159,10 @@
         el.style.backgroundColor = "gray";
         el.style.padding = "0px";
         var surveyIcon = document.getElementById("surveyIcon");
-        surveyIcon.style.display = "none";
+        var newHeight = 0;
+        var newWidth = 0;
+        surveyIcon.style.height = newHeight + "px";
+        surveyIcon.style.width = newWidth + "px";
       }
       function surveyDesert() {
         var survey = document.getElementById("desertSurvey");
@@ -186,12 +189,10 @@
         survey.style.display = "inline-grid";
       }
       function unSurvey(el) {
-        var newHeight = 0;
-        var newWidth = 0;
-        surveyIcon.style.height = newHeight + "px";
-        surveyIcon.style.width = newWidth + "px";     
+        var survey = document.getElementById("desertSurvey");
+        survey.style.display = "none";
       }
     </script>
   </body>
 </html>
-<!--Version 0.74--->
+<!--Version 0.75--->
