--- a/planets.html
+++ b/planets.html
@@ -182,30 +182,26 @@
         desertSurvey.style.display = "inline-grid";
       }
       function surveySavanna() {
-        var survey = document.getElementById("savannaSurvey");
-        survey.style.display = "inline-grid";
+        savannaSurvey.style.display = "inline-grid";
       }
       function surveyArctic() {
-        var survey = document.getElementById("arcticSurvey");
-        survey.style.display = "inline-grid";
+        arcticSurvey.style.display = "inline-grid";
       }
       function surveyTundra() {
-        var survey = document.getElementById("tundraSurvey");
-        survey.style.display = "inline-grid";
+        tundraSurvey.style.display = "inline-grid";
       }
       function surveyContinental() {
-        var survey = document.getElementById("continentalSurvey");
-        survey.style.display = "inline-grid";
+        continentalSurvey.style.display = "inline-grid";
       }
       function surveyOcean() {
-        var survey = document.getElementById("oceanSurvey");
-        survey.style.display = "inline-grid";
+        oceanSurvey.style.display = "inline-grid";
       }
       function unSurvey(el) {
         var survey = document.getElementById("desertSurvey");
         survey.style.display = "none";
+        console.log("Sorry this only works on desert planets because your scanners are bad")
       }
     </script>
   </body>
 </html>
-<!--Version 0.78--->
+<!--Version 0.79--->
