--- a/planets.html
+++ b/planets.html
@@ -163,7 +163,7 @@
         var newWidth = 20;
         surveyIcon.style.height = newHeight + "px";
         surveyIcon.style.width = newWidth + "px";
-        var currentSurvey = el;
+        var currentSurvey = el.id;
       }
       function deselect(el) {
         el.style.backgroundColor = "gray";
@@ -203,4 +203,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.80--->
+<!--Version 0.81--->
