--- a/planets.html
+++ b/planets.html
@@ -163,7 +163,8 @@
         var newWidth = 20;
         surveyIcon.style.height = newHeight + "px";
         surveyIcon.style.width = newWidth + "px";
-        var newSurvey = el.id + "Survey";
+        var currentSurvey = el.id + "Survey";
+        var newSurvey = document.getElementById(currentSurvey)
         el.appendChild(newSurvey);
       }
       function deselect(el) {
@@ -207,4 +208,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.82--->
+<!--Version 0.83--->
