--- a/planets.html
+++ b/planets.html
@@ -164,7 +164,7 @@
         surveyIcon.style.height = newHeight + "px";
         surveyIcon.style.width = newWidth + "px";
         var currentSurvey = el.id + "Survey";
-        var newSurvey = document.getElementById(currentSurvey)
+        newSurvey = document.getElementById(currentSurvey)
         /*newSurvey.style.display = "inline-grid";*/
       }
       function deselect(el) {
@@ -203,9 +203,9 @@
       }
       function unSurvey(el) {
         el.style.display = "none";
-        console.log("Un-surveyed")
+        console.log("Un-surveyed");
       }
     </script>
   </body>
 </html>
-<!--Version 0.85--->
+<!--Version 0.86--->
