--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@
       .button { grid-area:button; }
       .top { grid-area:top; display:none; }
       .bottom { grid-area:bottom; display:none; }
-      #event1 { height:300px; }
+      #event1 { height:300px; top:100px; left:1100px; }
     </style>
   </head>
   
