--- a/events.html
+++ b/events.html
@@ -49,9 +49,9 @@
       <div class="cell top"></div>
       <div class="cell name"><p> MINERAL THEFT </p></div>
       <div class="cell desc"><p> A thief has broken into a storage warehouse on [planetName] and stolen a large amount of raw minerals recently mined from the planet. </p></div>
-      <cell clas="cell margin1">
+      <cell clas="cell margin1"></div>
       <div class="cell button"><button> Unfortunate. </button></div>
-      <cell clas="cell margin2">
+      <cell clas="cell margin2"></div>
       <div class="cell bottom"></div>
     </div>
   
