--- a/events.html
+++ b/events.html
@@ -40,7 +40,7 @@
       .top { grid-area:top; display:none; }
       .bottom { grid-area:bottom; display:none; }
       #event1 { height:300px; top:100px; left:900px; }
-      #button1 { border-radius:10%; background:darkblue; }
+      #button1 { border-radius:10%; background:#7096cf; }
     </style>
   </head>
   
@@ -61,4 +61,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.9--->
+<!--Version 0.10--->
