--- a/events.html
+++ b/events.html
@@ -50,9 +50,9 @@
       <div class="cell top"></div>
       <div class="cell name"><p> MINERAL THEFT </p></div>
       <div class="cell desc"><p> A thief has broken into a storage warehouse on [planetName] and stolen a large amount of raw minerals recently mined from the planet. </p></div>
-      <cell clas="cell margin1"></div>
+      <div class="cell margin1"></div>
       <div class="cell button"><button id="button1"> Unfortunate. </button></div>
-      <cell clas="cell margin2"></div>
+      <div clas="cell margin2"></div>
       <div class="cell bottom"></div>
     </div>
   
@@ -61,4 +61,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.11--->
+<!--Version 0.12--->
