--- a/test1.html
+++ b/test1.html
@@ -4,7 +4,7 @@
   </head>
   <body>
   
-  <p>You are located on</p> + planetName + <p>.</p>
+  <div><p>You are located on</p> + planetName + <p>.</p></div>
   
   <script>
   var planetName = "Earth";
