--- a/test1.html
+++ b/test1.html
@@ -4,11 +4,11 @@
   </head>
   <body>
   
-  <span>You are located on</span><span id="planet"></span><span>.</span>
+  <span>You are located on </span><span id="planet1"></span><span>.</span>
   
   <script>
     var planetName = "Earth";
-    var planet1 = document.getElementById("planet");
+    var planet1 = document.getElementById("planet1");
     planet1.innerText = planetName;
   </script>
   
