--- a/test1.html
+++ b/test1.html
@@ -4,7 +4,7 @@
   </head>
   <body>
   
-  <span> You are located on </span><span> </span><span id="planet1"></span><span>.</span>
+  <span> You are located on </span><span id="planet1"></span><span>.</span>
   
   <script>
     var planetName = "Earth";
@@ -14,4 +14,4 @@
   
   </body>
 </html>
-<!--Test Version 1.6 *** Variables in paragraphs--->
+<!--Test Version 1.7 *** Variables in paragraphs--Success->
