--- a/planets.html
+++ b/planets.html
@@ -191,7 +191,7 @@
         console.log("Un-surveyed");
       }
       function yee(el) {
-        prompt("What do you want to name this planet?")
+        var yee = prompt("What do you want to name this planet?")
       }
     </script>
   </body>
