--- a/planets.html
+++ b/planets.html
@@ -73,7 +73,7 @@
     <img class="planet" id="continental" src="continentalplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Continental Planet Img---->
     <img class="planet" id="ocean" src="oceanplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Ocean Planet Img---->
     
-    <img class="surveyIcon" id="surveyIcon" src="surveyicon.png" onclick="surveyPlanet(this)" onclick="yee(this)"></img>
+    <img class="surveyIcon" id="surveyIcon" src="surveyicon.png" onclick="surveyPlanet(this)" onmouseout="yee(this)"></img>
 
     <div class="info-box" id="desertSurvey" onclick="unSurvey(this)"> <!--Desert Planet--->
       <div class="cell top"></div>
@@ -196,4 +196,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.91--->
+<!--Version 0.93--->
