--- a/planets.html
+++ b/planets.html
@@ -73,7 +73,7 @@
     <img class="planet" id="continental" src="continentalplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Continental Planet Img---->
     <img class="planet" id="ocean" src="oceanplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Ocean Planet Img---->
     
-    <img class="surveyIcon" id="surveyIcon" src="surveyicon.png" onclick="surveyPlanet(this)" onmouseout="yee(this)"></img>
+    <img class="surveyIcon" id="surveyIcon" src="surveyicon.png" onclick="surveyPlanet(this)"></img>
 
     <div class="info-box" id="desertSurvey" onclick="unSurvey(this)"> <!--Desert Planet--->
       <div class="cell top"></div>
@@ -189,9 +189,6 @@
       function unSurvey(el) {
         el.style.display = "none";
         console.log("Un-surveyed");
-      }
-      function yee(el) {
-        var yee = prompt("What do you want to name this planet?")
       }
     </script>
   </body>
