--- a/planets.html
+++ b/planets.html
@@ -77,7 +77,7 @@
 
     <div class="info-box" id="desertSurvey" onclick="unSurvey(this)"> <!--Desert Planet--->
       <div class="cell top"></div>
-      <div class="cell name"><span id="planet1">  </span></div>
+      <div class="cell name"><span id="desertPlanet">  </span></div>
       <div class="cell sprite"><img class="cell desertSprite" src="desertplanet1.png"></img></div>
       <div class="cell habit"><p> [% Habitability] </p></div>
       <div class="cell cost"><p> [# of Credits in Upkeep Cost] </p></div>
@@ -88,7 +88,7 @@
 
     <div class="info-box" id="savannaSurvey" onclick="unSurvey(this)"> <!--Savanna Planet--->
       <div class="cell top"></div>
-      <div class="cell name"><p> [variable] </p></div>
+      <div class="cell name"><span> [variable] </span></div>
       <div class="cell sprite"><img class="cell savannaSprite" src="savannaplanet1.png"></img></div>
       <div class="cell habit"><p> [% Habitability] </p></div>
       <div class="cell cost"><p> [# of Credits in Upkeep Cost] </p></div>
@@ -99,7 +99,7 @@
 
     <div class="info-box" id="arcticSurvey" onclick="unSurvey(this)"> <!--Arctic Planet--->
       <div class="cell top"></div>
-      <div class="cell name"><p> [variable] </p></div>
+      <div class="cell name"><span> [variable] </span></div>
       <div class="cell sprite"><img class="cell arcticSprite" src="arcticplanet1.png"></img></div>
       <div class="cell habit"><p> [% Habitability] </p></div>
       <div class="cell cost"><p> [# of Credits in Upkeep Cost] </p></div>
@@ -110,7 +110,7 @@
 
     <div class="info-box" id="tundraSurvey" onclick="unSurvey(this)"> <!--Tundra Planet--->
       <div class="cell top"></div>
-      <div class="cell name"><p> [variable] </p></div>
+      <div class="cell name"><span> [variable] </span></div>
       <div class="cell sprite"><img class="cell tundraSprite" src="tundraplanet1.png"></img></div>
       <div class="cell habit"><p> [% Habitability] </p></div>
       <div class="cell cost"><p> [# of Credits in Upkeep Cost] </p></div>
@@ -121,7 +121,7 @@
 
     <div class="info-box" id="continentalSurvey" onclick="unSurvey(this)"> <!--Continental Planet--->
       <div class="cell top"></div>
-      <div class="cell name"><p> [variable] </p></div>
+      <div class="cell name"><span> [variable] </span></div>
       <div class="cell sprite"><img class="cell continentalSprite" src="continentalplanet1.png"></img></div>
       <div class="cell habit"><p> [% Habitability] </p></div>
       <div class="cell cost"><p> [# of Credits in Upkeep Cost] </p></div>
@@ -132,7 +132,7 @@
 
     <div class="info-box" id="oceanSurvey" onclick="unSurvey(this)"> <!--Ocean Planet--->
       <div class="cell top"></div>
-      <div class="cell name"><p> [variable] </p></div>
+      <div class="cell name"><span> [variable] </span></div>
       <div class="cell sprite"><img class="cell oceanSprite" src="oceanplanet1.png"></img></div>
       <div class="cell habit"><p> [% Habitability] </p></div>
       <div class="cell cost"><p> [# of Credits in Upkeep Cost] </p></div>
@@ -152,9 +152,9 @@
       var oceanSurvey = document.getElementById("oceanSurvey");
       var newSurvey = null;
       
-      var planet1Name = "Calsron"; /*Desert Planet Name*/
-      const planet1 = document.getElementById("planet1");
-      planet1.innerText = planet1Name;
+      var desertPlanetName = "Calsron"; /*Desert Planet Name*/
+      const desertPlanet = document.getElementById("desertPlanet");
+      desertPlanet.innerText = desertPlanetName;
       
       function select(el) {
         el.style.backgroundColor = "lime";
@@ -193,4 +193,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.93--->
+<!--Version 0.94--->
