--- a/planets.html
+++ b/planets.html
@@ -40,7 +40,7 @@
       .cell { background: lightgray; padding: 3px; position: relative; overflow:hidden; font-size:80%; background:#7096cf; }
       .cell p { font-family: 'MedievalSharp', cursive; font-size:90%; }
       .name { grid-area: name; text-align:center; }
-      .name span { white-space: nowrap; font-size:180%; }
+      .name span { font-size:180%; }
       .sprite { grid-area:sprite; }
       .desertSprite { image-rendering:pixelated; background:grey; border-radius:50%; }
       .savannaSprite { image-rendering:pixelated; background:grey; border-radius:50%; }
@@ -193,4 +193,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.94--->
+<!--Version 0.95--->
