--- a/test3.html
+++ b/test3.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <style>
     
-      body { background:#030a17; }
+      body { background:lightblue; }
       .planet { position:absolute; image-rendering:pixelated; width:50px; height:50px; background:grey; border-radius:50%; transition:0.5s; }
       
       #desert { top:50px; left:100px; }
