--- a/test3.html
+++ b/test3.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> 4x Planet Showcase </title>
+    <title> Test 3 </title>
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <style>
     
