--- a/test3.html
+++ b/test3.html
@@ -145,7 +145,7 @@
 
     <div>
       <form id="form1">
-        <label for="desertPlanetName">Name this planet:</label>
+        <label for="desertPlanetName">Your sensor have detected a possibly habitable planet. What do you want to name it?</label>
         <input type="text" id="desertPlanetName"><br><br>
         <button type="button" value="Submit" onclick="nameDesertPlanet(this)"> Submit </button>
       </form>
@@ -166,6 +166,7 @@
         var desertPlanet = document.getElementById("desertPlanet");
         desertPlanet.innerText = document.getElementById("desertPlanetName").value;
       }
+      
       function select(el) {
         el.style.backgroundColor = "lime";
         el.style.padding = "1.5px";
@@ -203,4 +204,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.1--Checking Planet Name w/ Forms--->
+<!--Version 0.3--Checking Planet Name w/ Forms--->
