--- a/test3.html
+++ b/test3.html
@@ -144,8 +144,8 @@
       <div class="cell bottom"></div>
     </div>
 
-    <div class="form">
-      <form id="form1">
+    <div class="form" id="form1">
+      <form>
         <label for="desertPlanetName">Your sensor have detected a possibly habitable planet. What do you want to name it?</label>
         <input type="text" autocomplete="off" id="desertPlanetName"><br><br>
         <button type="button" value="Submit" onclick="nameDesertPlanet(this)"> Submit </button>
@@ -204,4 +204,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.5--Checking Planet Name w/ Forms--->
+<!--Version 0.6--Checking Planet Name w/ Forms--->
